# requrv-hub-backend-feature-CE-agent

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  sonar-project.properties
core/: check_env_variables.py  settings.py
core/agents/core/: tools.py
core/agents/generic_tools/: tools.py
core/agents/incomeStatementAnalyser/: config.py  route.py  run.py  service.py  tools.py
core/middleware/: lago_guard.py
core/modules/auth/: model.py  oauth.py  route.py
core/modules/lago/: model.py
core/modules/langfuse/: model.py  route.py
core/modules/media/: route.py  service.py
core/modules/seat/: model.py  route.py
core/modules/subscription/: model.py  route.py
core/modules/user/: model.py  route.py
core/modules/vector_db/: model.py  route.py
core/modules/webhook/: route.py
core/services/: email.py  litellm.py  otp.py  webhook.py
core/services/lago/: lago.py
prisma/migrations/20250911154518_re_init/: migration.sql
prisma/migrations/20250911155258_insert_webhook_model/: migration.sql
prisma/migrations/20250911160203_fix_models_subscription_and_user/: migration.sql
prisma/schema/: agents.prisma  area.prisma  chartAccount.prisma  chartAccountCEE.prisma  collections.prisma  document.prisma  incomeStatement.prisma  incomeStatementConversionTable.prisma  langfuse.prisma  legal.prisma  media.prisma  organization.prisma  prompt.prisma  provider.prisma  schema.prisma  seats.prisma  subscription.prisma  user.prisma  valuesCostsRevenues.prisma  vector.prisma  webhook.prisma
workflows/: sonarqube.yml
(+12 files in other folders)
